Fix URLs on README and 2019-10-08 report

--- a/2019-10-08-clubhouse-rpt.html
+++ b/2019-10-08-clubhouse-rpt.html
@@ -118,7 +118,7 @@ slide:not(.current) .plotly.html-widget{
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">2019-10-07 09:52:35</p>
+            <p style="margin-top: 6px; margin-left: -2px;">2019-10-07 10:12:57</p>
           </hgroup>
   </slide>
 
@@ -213,16 +213,18 @@ slide:not(.current) .plotly.html-widget{
 <slide class=""><hgroup><h2>Last month’s activities</h2></hgroup><article  id="last-months-activities">
 
 <ul>
-<li>Simulated Emergency Test (SET), 2019-10-05</li>
-<li>Cabinets arrived; installation in progress</li>
+<li>Simulated Emergency Test (SET), 2019-10-05.</li>
+<li>Antenna rotor cables fed from attic into shack; rotors tested.</li>
+<li>Cabinets arrived; installation in progress.</li>
 </ul>
 
 </article></slide><slide class=""><hgroup><h2>Quick-start guides</h2></hgroup><article  id="quick-start-guides">
 
 <ul>
-<li><a href='https://nittany-amateur-radio-club.github.io/clubhouse-guide.html' title=''>Clubhouse guide</a></li>
-<li><a href='https://nittany-amateur-radio-club.github.io/IC-7610.html' title=''>IC-7610</a></li>
-<li><a href='https://nittany-amateur-radio-club.github.io/elecraft-k3s.html' title=''>Elecraft K3S</a></li>
+<li><a href='https://nittany-amateur-radio-club.github.io/clubhouse/clubhouse-guide.html' title=''>Clubhouse guide</a></li>
+<li><a href='https://nittany-amateur-radio-club.github.io/clubhouse/IC-7610.html' title=''>IC-7610</a></li>
+<li><a href='https://nittany-amateur-radio-club.github.io/clubhouse/elecraft-k3s.html' title=''>Elecraft K3S</a></li>
+<li><a href='https://nittany-amateur-radio-club.github.io/clubhouse/KPA1500.html' title=''>Elecraft KPA1500 amplifier</a></li>
 </ul>
 
 </article></slide><slide class=""><hgroup><h2>Upcoming events</h2></hgroup><article  id="upcoming-events">
