More updates to IC-7610

--- a/IC-7610.html
+++ b/IC-7610.html
@@ -376,7 +376,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">IC-7610</h1>
 <h4 class="author">Rick Gilmore K3ROG</h4>
-<h4 class="date">2019-10-07 09:54:54</h4>
+<h4 class="date">2019-10-07 10:19:58</h4>
 
 </div>
 
@@ -399,8 +399,8 @@ $(document).ready(function () {
 <li>WSTJ-X, JS8Call, fldigi, N1MM, N3FJP</li>
 </ul></li>
 <li>The default configuration uses the ICOM SM-50 desk mic.</li>
-<li>There is a Clipper footswitch for the PTT on the floor.</li>
-<li>There is a Heil headset.</li>
+<li>Clipper footswitch for the PTT on the floor.</li>
+<li>Heil headset.</li>
 <li>We have a Nifty Mini-manual and other manuals are located in the drawer under the radio.</li>
 </ul>
 </div>
@@ -432,18 +432,9 @@ $(document).ready(function () {
 <ul>
 <li>The IC-7610 is connected via USB to the NARC-1 PC.</li>
 <li>Open your logging program of choice. NARC has licenses for N1MM and N3FJP’s Amateur Contact Log.</li>
-<li>To operate digital modes (e.g., FT8/FT4, JS8Call, fldigi), open those programs. See instructions for operating these modes below.</li>
+<li>To operate digital modes (e.g., FT8/FT4, JS8Call, fldigi), open those programs. See instructions for operating these modes in separate documents.</li>
 </ul>
 </div>
-</div>
-<div id="accessories" class="section level3">
-<h3>Accessories</h3>
-<ul>
-<li>The default configuration uses the ICOM SM-50 desk mic.</li>
-<li>There is a Clipper footswitch for the PTT on the floor.</li>
-<li>There is a Heil headset.</li>
-<li>We have a Nifty Mini-manual and other manuals are located in the drawer under the radio.</li>
-</ul>
 </div>
 </div>
 
