--- a/clubhouse-guide.html
+++ b/clubhouse-guide.html
@@ -288,7 +288,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">NARC clubhouse guide</h1>
 <h4 class="author">Rick Gilmore K3ROG</h4>
-<h4 class="date">2019-10-07 10:04:58</h4>
+<h4 class="date">2019-10-07 10:20:31</h4>
 
 </div>
 
@@ -316,8 +316,8 @@ div.tocify {
 <div id="equipment-setup" class="section level1">
 <h1>Equipment setup</h1>
 <!-- Icom IC-7610 -->
-<div id="ic-7610" class="section level2">
-<h2>IC-7610</h2>
+<div id="ic-7610-hf-transceiver" class="section level2">
+<h2>IC-7610 HF Transceiver</h2>
 <div id="equipment-summary" class="section level3">
 <h3>Equipment summary</h3>
 <ul>
@@ -334,8 +334,8 @@ div.tocify {
 <li>WSTJ-X, JS8Call, fldigi, N1MM, N3FJP</li>
 </ul></li>
 <li>The default configuration uses the ICOM SM-50 desk mic.</li>
-<li>There is a Clipper footswitch for the PTT on the floor.</li>
-<li>There is a Heil headset.</li>
+<li>Clipper footswitch for the PTT on the floor.</li>
+<li>Heil headset.</li>
 <li>We have a Nifty Mini-manual and other manuals are located in the drawer under the radio.</li>
 </ul>
 </div>
@@ -367,19 +367,10 @@ div.tocify {
 <ul>
 <li>The IC-7610 is connected via USB to the NARC-1 PC.</li>
 <li>Open your logging program of choice. NARC has licenses for N1MM and N3FJP’s Amateur Contact Log.</li>
-<li>To operate digital modes (e.g., FT8/FT4, JS8Call, fldigi), open those programs. See instructions for operating these modes below.</li>
-</ul>
-</div>
-</div>
-<div id="accessories" class="section level3">
-<h3>Accessories</h3>
-<ul>
-<li>The default configuration uses the ICOM SM-50 desk mic.</li>
-<li>There is a Clipper footswitch for the PTT on the floor.</li>
-<li>There is a Heil headset.</li>
-<li>We have a Nifty Mini-manual and other manuals are located in the drawer under the radio.</li>
+<li>To operate digital modes (e.g., FT8/FT4, JS8Call, fldigi), open those programs. See instructions for operating these modes in separate documents.</li>
 </ul>
 <!-- Elecraft K3S -->
+</div>
 </div>
 </div>
 <div id="elecraft-k3s" class="section level2">
