--- a/IC-7610.html
+++ b/IC-7610.html
@@ -376,32 +376,32 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">IC-7610</h1>
 <h4 class="author">Rick Gilmore K3ROG</h4>
-<h4 class="date">2019-10-07 10:19:58</h4>
+<h4 class="date">2019-10-07 10:24:47</h4>
 
 </div>
 
 
-<div id="ic-7610" class="section level2">
-<h2>IC-7610</h2>
+<div id="ic-7610-hf-transceiver" class="section level2">
+<h2>IC-7610 HF Transceiver</h2>
 <div id="equipment-summary" class="section level3">
 <h3>Equipment summary</h3>
 <ul>
-<li>Icom IC-7610 (HF + 6m)
+<li>Icom IC-7610 (HF + 6m) transceiver
 <ul>
-<li>Astron power supply</li>
+<li>Astron RS-35A power supply</li>
 </ul></li>
 <li>Elecraft KPA1500
 <ul>
 <li>Elecraft power supply</li>
 </ul></li>
+<li>The default configuration uses the ICOM SM-50 desk mic.</li>
+<li>Clipper footswitch for the PTT on the floor.</li>
+<li>Heil headset.</li>
+<li>Nifty mini-manual and other manuals are located in the drawer under the radio.</li>
 <li>Windows 10 PC, dual monitor set-up
 <ul>
 <li>WSTJ-X, JS8Call, fldigi, N1MM, N3FJP</li>
 </ul></li>
-<li>The default configuration uses the ICOM SM-50 desk mic.</li>
-<li>Clipper footswitch for the PTT on the floor.</li>
-<li>Heil headset.</li>
-<li>We have a Nifty Mini-manual and other manuals are located in the drawer under the radio.</li>
 </ul>
 </div>
 <div id="connect-equipment-and-power-up" class="section level3">
