--- a/elecraft-k3s.html
+++ b/elecraft-k3s.html
@@ -376,7 +376,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">Elecraft K3S</h1>
 <h4 class="author">Rick Gilmore K3ROG</h4>
-<h4 class="date">2019-10-07 09:55:38</h4>
+<h4 class="date">2019-10-07 10:24:50</h4>
 
 </div>
 
@@ -388,11 +388,11 @@ $(document).ready(function () {
 <ul>
 <li>Elecraft K3S (HF + 6m) transceiver
 <ul>
-<li>Astron power supply</li>
+<li>Astron RS-35A power supply</li>
 </ul></li>
 <li>Elecraft KPA1500
 <ul>
-<li>Power supply</li>
+<li>Elecraft power supply</li>
 </ul></li>
 <li>Elecraft P3 Panadapter</li>
 <li>Footswitch on the floor.</li>
