--- a/clubhouse-guide.html
+++ b/clubhouse-guide.html
@@ -305,7 +305,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">NARC clubhouse guide</h1>
 <h4 class="author">Rick Gilmore K3ROG</h4>
-<h4 class="date">2019-10-21 15:07:16</h4>
+<h4 class="date">2019-11-12 17:56:49</h4>
 
 </div>
 
@@ -335,7 +335,12 @@ div.tocify {
 <!-- Icom IC-7610 -->
 <div id="ic-7610-hf-transceiver" class="section level2">
 <h2>IC-7610 HF Transceiver</h2>
-<p><img src="img/ic-7610.jpg" width="6.5in" style="display: block; margin: auto;" /></p>
+<div class="figure" style="text-align: center">
+<img src="img/ic-7610.jpg" alt="IC-7610" width="600px" />
+<p class="caption">
+IC-7610
+</p>
+</div>
 <p>This transceiver is currently connected to the NARC1 computer.</p>
 <div id="equipment-summary" class="section level3">
 <h3>Equipment summary</h3>
@@ -381,7 +386,7 @@ div.tocify {
 <li><p>Power up the IC-7610/NARC1 by pressing and briefly holding the power button.</p></li>
 </ol>
 <div class="figure" style="text-align: center">
-<img src="img/ic-7610-power-switch.png" alt="IC-7610 power switch" width="6.5in" />
+<img src="img/ic-7610-power-switch.png" alt="IC-7610 power switch" width="600px" />
 <p class="caption">
 IC-7610 power switch
 </p>
@@ -391,7 +396,7 @@ IC-7610 power switch
 </ol>
 <p>The IC-7610/NARC1 is connected to the Elecraft KPA1500 amplifier. The power supply for the KPA1500 is under the desk on a small footstool. Check that the KPA1500 power supply is on. If necessary, power-up the power supply by hitting the power switch on the upper rear left side of the power supply. When the amplifier power switch is on, you will see 3 green lights: AC on, High V supply, Low V supply. Power up the KPA1500 by pressing the <code>on</code> switch on the lower right hand side of the KPA1500 front panel.</p>
 <div class="figure" style="text-align: center">
-<img src="img/kpa1500-power-switch.png" alt="KPA1500 Power Switch" width="6.5in" />
+<img src="img/kpa1500-power-switch.png" alt="KPA1500 Power Switch" width="600px" />
 <p class="caption">
 KPA1500 Power Switch
 </p>
@@ -411,7 +416,7 @@ KPA1500 Power Switch
 <ul>
 <li>Audio levels for the two VFOs are controlledd via separate knobs on the left side of the front panel.</li>
 </ul>
-<p><img src="img/ic-7610-af.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/ic-7610-af.png" width="600px" style="display: block; margin: auto;" /></p>
 <ul>
 <li>You may switch operating bands in one of two ways:
 <ul>
@@ -419,11 +424,11 @@ KPA1500 Power Switch
 <li>Pressing the frequency on the touch screen.</li>
 </ul></li>
 </ul>
-<p><img src="img/ic-7610-chg-band.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/ic-7610-chg-band.png" width="600px" style="display: block; margin: auto;" /></p>
 <ul>
 <li>Switch operating modes by pressing the mode button on the touch panel.</li>
 </ul>
-<p><img src="img/ic-7610-chg-mode.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/ic-7610-chg-mode.png" width="600px" style="display: block; margin: auto;" /></p>
 <p>This opens a window where you can choose the mode of operation. - Hit the arrow button to close the window and save your choice.</p>
 <ul>
 <li>Turn digital noise reduction on or off by pressing the NR button on the left side of the front panel. When NR is on, the NR button will be illuminated.
@@ -434,25 +439,25 @@ KPA1500 Power Switch
 </ul></li>
 <li>Adjust preamplifier (<code>P.AMP</code>) settings, automatic gain control (<code>AGC</code>), Intercept Point (<code>IP+</code>), <code>VOX</code>, and compression (<code>COMP</code>) settings by pressing the corresponding button on the left side of the touch/display screen.</li>
 </ul>
-<p><img src="img/ic-7610-left-touch-buttons.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/ic-7610-left-touch-buttons.png" width="600px" style="display: block; margin: auto;" /></p>
 <ul>
 <li>Adjust touch/display screen settings via the MENU1/MENU2 buttons at the bottom of the touch/display screen.</li>
 </ul>
-<p><img src="img/ic-7610-menu-touch-buttons.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/ic-7610-menu-touch-buttons.png" width="600px" style="display: block; margin: auto;" /></p>
 <ul>
 <li>Select receive filter settings via the <code>FILTER</code> button on the right side of the front panel, below the <code>TWIN PBT</code> knob.</li>
 </ul>
-<p><img src="img/ic-7610-filter.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/ic-7610-filter.png" width="600px" style="display: block; margin: auto;" /></p>
 <ul>
 <li>Set RF power by pressing the MULTI button to open a window on the display/touch screen. Press the RF POWER panel to select it, and adjust the output power by turning the MULTI knob.</li>
 </ul>
-<p><img src="img/ic-7610-multi.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/ic-7610-multi.png" width="600px" style="display: block; margin: auto;" /></p>
 <!-- Elecraft K3S -->
 </div>
 </div>
 <div id="elecraft-k3s" class="section level2">
 <h2>Elecraft K3S</h2>
-<p><img src="img/elecraft-k3s.jpg" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/elecraft-k3s.jpg" width="600px" style="display: block; margin: auto;" /></p>
 <p>The K3S is currently connected to the NARC2 computer. The Elecraft K3S/NARC2 is located in the middle of the long desk to the right of the IC-7610/NARC1 station.</p>
 <div id="equipment-summary-1" class="section level3">
 <h3>Equipment summary</h3>
@@ -506,7 +511,7 @@ KPA1500 Power Switch
 </ol>
 <p>The IC-7610/NARC1 is connected to the Elecraft KPA1500 amplifier. The power supply for the KPA1500 is under the desk on a small footstool. Check that the KPA1500 power supply is on. If necessary, power-up the power supply by hitting the power switch on the upper rear left side of the power supply. When the amplifier power switch is on, you will see 3 green lights: AC on, High V supply, Low V supply. Power up the KPA1500 by pressing the <code>on</code> switch on the lower right hand side of the KPA1500 front panel.</p>
 <div class="figure" style="text-align: center">
-<img src="img/kpa1500-power-switch.png" alt="KPA1500 Power Switch" width="6.5in" />
+<img src="img/kpa1500-power-switch.png" alt="KPA1500 Power Switch" width="600px" />
 <p class="caption">
 KPA1500 Power Switch
 </p>
@@ -525,7 +530,7 @@ KPA1500 Power Switch
 </div>
 <div id="elecraft-kpa1500" class="section level2">
 <h2>Elecraft KPA1500</h2>
-<p><img src="img/kpa1500.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/kpa1500.png" width="600px" style="display: block; margin: auto;" /></p>
 <div id="summary" class="section level3">
 <h3>Summary</h3>
 <ul>
@@ -661,16 +666,16 @@ KPA1500 Power Switch
 <ol style="list-style-type: decimal">
 <li>For &lt; 100W output, set amplifier to STBY mode (yellow light) by pressing the MODE button to toggle between STBY (yellow light) and OPER (green).</li>
 </ol>
-<p><img src="img/kpa1500-mode.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/kpa1500-mode.png" width="600px" style="display: block; margin: auto;" /></p>
 <p>For higher power output, follow separate instructions for tuning the KPA1500 amplifier.</p>
 <ol start="2" style="list-style-type: decimal">
 <li>Confirm ANT1 is output (press ANTENNA to toggle).</li>
 </ol>
-<p><img src="img/kpa1500-ant.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/kpa1500-ant.png" width="600px" style="display: block; margin: auto;" /></p>
 <ol start="3" style="list-style-type: decimal">
 <li>Confirm ATU is IN (not BYP) by pressing and holding ATU TUNE button.</li>
 </ol>
-<p><img src="img/kpa1500-atu.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/kpa1500-atu.png" width="600px" style="display: block; margin: auto;" /></p>
 <p>Have fun!</p>
 </div>
 <div id="operating-hints" class="section level4">
@@ -728,16 +733,16 @@ KPA1500 Power Switch
 <ol style="list-style-type: decimal">
 <li>For &lt; 100W output, set amplifier to STBY mode (yellow light) by pressing the MODE button to toggle between STBY (yellow light) and OPER (green).</li>
 </ol>
-<p><img src="img/kpa1500-mode.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/kpa1500-mode.png" width="600px" style="display: block; margin: auto;" /></p>
 <p>For higher power output, follow separate instructions for tuning the KPA1500 amplifier.</p>
 <ol start="2" style="list-style-type: decimal">
 <li>Confirm ANT1 is output (press ANTENNA to toggle).</li>
 </ol>
-<p><img src="img/kpa1500-ant.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/kpa1500-ant.png" width="600px" style="display: block; margin: auto;" /></p>
 <ol start="3" style="list-style-type: decimal">
 <li>Confirm ATU is IN (not BYP) by pressing and holding ATU TUNE button.</li>
 </ol>
-<p><img src="img/kpa1500-atu.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/kpa1500-atu.png" width="600px" style="display: block; margin: auto;" /></p>
 <p>Have fun!</p>
 </div>
 </div>
@@ -784,18 +789,18 @@ KPA1500 Power Switch
 <ol style="list-style-type: decimal">
 <li>Confirm rig is in USB Data 2 (USB-D2) mode.</li>
 </ol>
-<p><img src="img/ic-7610-chg-mode.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/ic-7610-chg-mode.png" width="600px" style="display: block; margin: auto;" /></p>
 <p>To change the mode, press the mode indicator on the touch screen to open a window to toggle the mode (USB/LSB) to USB. Unless you are sure that your digital mode uses LSB, select USB. Press and hold the DATA button to switch between D1, D2, and D3 data mode connectors. D2 is configured for use via USB.</p>
 <ol start="2" style="list-style-type: decimal">
 <li>Set your bandwidth to filter 1 (wide) by pressing the FILTER button located on the right side of the front panel.</li>
 </ol>
-<p><img src="img/ic-7610-filter.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/ic-7610-filter.png" width="600px" style="display: block; margin: auto;" /></p>
 <p>You may adjust the filter settings by pressing and holding the filter button on the right side of the rig control panel. Press the arrow/return button on the display/touch screen to save and apply the filter settings.</p>
 <ol start="3" style="list-style-type: decimal">
 <li>Set other settings</li>
 </ol>
 <p>The following settings can be changed via buttons on the left side of the touch/display screen.</p>
-<p><img src="img/ic-7610-left-touch-buttons.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/ic-7610-left-touch-buttons.png" width="600px" style="display: block; margin: auto;" /></p>
 <ul>
 <li>Preamps (P.AMP) off</li>
 </ul>
@@ -824,7 +829,7 @@ KPA1500 Power Switch
 <ol start="4" style="list-style-type: decimal">
 <li>Set desired RF power output using MULTI knob.</li>
 </ol>
-<p><img src="img/ic-7610-multi.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/ic-7610-multi.png" width="600px" style="display: block; margin: auto;" /></p>
 <p>Press and hold the MULTI button to open a window on the touch/display screen. Press the RF POWER panel and rotate the MULTI button to set RF power.</p>
 </div>
 <div id="on-kpa1500-2" class="section level4">
@@ -833,16 +838,16 @@ KPA1500 Power Switch
 <ol style="list-style-type: decimal">
 <li>For &lt; 100W output, set amplifier to STBY mode (yellow light) by pressing the MODE button to toggle between STBY (yellow light) and OPER (green).</li>
 </ol>
-<p><img src="img/kpa1500-mode.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/kpa1500-mode.png" width="600px" style="display: block; margin: auto;" /></p>
 <p>For higher power output, follow separate instructions for tuning the KPA1500 amplifier.</p>
 <ol start="2" style="list-style-type: decimal">
 <li>Confirm ANT1 is output (press ANTENNA to toggle).</li>
 </ol>
-<p><img src="img/kpa1500-ant.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/kpa1500-ant.png" width="600px" style="display: block; margin: auto;" /></p>
 <ol start="3" style="list-style-type: decimal">
 <li>Confirm ATU is IN (not BYP) by pressing and holding ATU TUNE button.</li>
 </ol>
-<p><img src="img/kpa1500-atu.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/kpa1500-atu.png" width="600px" style="display: block; margin: auto;" /></p>
 <p>Have fun!</p>
 </div>
 </div>
@@ -888,18 +893,18 @@ KPA1500 Power Switch
 <ul>
 <li>(if necessary, hit MODE button on right side of front panel to cycle to DATA mode; indicator will be near Tx icon on right side of the display).</li>
 </ul>
-<p><img src="img/elecraft-k3s-mode.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/elecraft-k3s-mode.png" width="600px" style="display: block; margin: auto;" /></p>
 <p>Press (and hold) the DATA MD (AFX) button on the middle right of the panel.</p>
-<p><img src="img/elecraft-k3s-data-mode.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/elecraft-k3s-data-mode.png" width="600px" style="display: block; margin: auto;" /></p>
 <p>Using the VFO B knob, select DATA A (not AFSK A). Press DATA MD again to enter change.</p>
 <ol start="2" style="list-style-type: decimal">
 <li>Set bandwidth to maximum (4 kHz) by rotating WIDTH knob (above and to the left of the VFO A knob) clockwise until the screen shows a 4.0 bandwidth.</li>
 </ol>
-<p><img src="img/elecraft-k3s-bandwidth.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/elecraft-k3s-bandwidth.png" width="600px" style="display: block; margin: auto;" /></p>
 <ol start="3" style="list-style-type: decimal">
 <li>Press SPEED/MIC button to MIC. When LINE appears, set level to 30 (midrange).</li>
 </ol>
-<p><img src="img/elecraft-k3s-speed-mic.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/elecraft-k3s-speed-mic.png" width="600px" style="display: block; margin: auto;" /></p>
 <ol start="4" style="list-style-type: decimal">
 <li>Set ALC.</li>
 </ol>
@@ -912,16 +917,16 @@ KPA1500 Power Switch
 <ol style="list-style-type: decimal">
 <li>For &lt; 100W output, set amplifier to STBY mode (yellow light) by pressing the MODE button to toggle between STBY (yellow light) and OPER (green).</li>
 </ol>
-<p><img src="img/kpa1500-mode.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/kpa1500-mode.png" width="600px" style="display: block; margin: auto;" /></p>
 <p>For higher power output, follow separate instructions for tuning the KPA1500 amplifier.</p>
 <ol start="2" style="list-style-type: decimal">
 <li>Confirm ANT1 is output (press ANTENNA to toggle).</li>
 </ol>
-<p><img src="img/kpa1500-ant.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/kpa1500-ant.png" width="600px" style="display: block; margin: auto;" /></p>
 <ol start="3" style="list-style-type: decimal">
 <li>Confirm ATU is IN (not BYP) by pressing and holding ATU TUNE button.</li>
 </ol>
-<p><img src="img/kpa1500-atu.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/kpa1500-atu.png" width="600px" style="display: block; margin: auto;" /></p>
 <p>Have fun!</p>
 </div>
 </div>
@@ -957,18 +962,18 @@ KPA1500 Power Switch
 <li>Confirm the rig is in SSB mode.</li>
 </ol>
 <p>To change the mode, press the mode indicator on the touch screen to open a window to toggle the mode (USB/LSB).</p>
-<p><img src="img/ic-7610-chg-mode.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/ic-7610-chg-mode.png" width="600px" style="display: block; margin: auto;" /></p>
 <p>Remember, the convention is to use LSB below 10 MHz except for 60m.</p>
 <ol start="2" style="list-style-type: decimal">
 <li>Set your bandwidth by pressing the FILTER button located on the right side of the front panel.</li>
 </ol>
 <p>You may adjust the filter settings by pressing and holding the filter button on the right side of the rig control panel. Press and hold the FILTER button on to save and apply the filter settings.</p>
-<p><img src="img/ic-7610-filter.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/ic-7610-filter.png" width="600px" style="display: block; margin: auto;" /></p>
 <ol start="2" style="list-style-type: decimal">
 <li><p>Check audio output levels.</p></li>
 <li><p>Set desired power output using MULTI knob.</p></li>
 </ol>
-<p><img src="img/ic-7610-multi.png" width="6.5in" style="display: block; margin: auto;" /></p>
+<p><img src="img/ic-7610-multi.png" width="600px" style="display: block; margin: auto;" /></p>
 <p>Press and hold the MULTI button to open a window on the touch/display screen. Press the RF POWER panel and rotate the MULTI button to set RF power.</p>
 </div>
 <div id="on-kpa1500-4" class="section level4">
