--- a/clubhouse-guide.html
+++ b/clubhouse-guide.html
@@ -305,7 +305,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">NARC clubhouse guide</h1>
 <h4 class="author">Rick Gilmore K3ROG</h4>
-<h4 class="date">2019-11-12 17:56:49</h4>
+<h4 class="date">2019-11-24 13:49:30</h4>
 
 </div>
 
@@ -318,6 +318,14 @@ div.tocify {
 <ul>
 <li>If you know that others will be joining you, you may leave the gate open, but make sure to park cross-wise, blocking the past the shack. This ensures that no other driver can inadvertently drive past you and get locked behind the gate when you leave.</li>
 </ul></li>
+</ul>
+<div class="figure" style="text-align: center">
+<img src="img/clubhouse-looking-north.jpg" alt="NARC Clubhouse looking North" width="75%" />
+<p class="caption">
+NARC Clubhouse looking North
+</p>
+</div>
+<ul>
 <li>Unlock door of the shack using the larger of the two keys. There is one lock above the door handle. Turn the key to the left (counterclockwise) to unlock the door.</li>
 <li>There are light switches on the left just inside the door.</li>
 <li>Put the padlock and locking bar on the desk near the door.</li>
@@ -326,7 +334,7 @@ div.tocify {
 <li>Go to the breaker box near the southeast corner of the shack (on your right as you enter the shack). By default, we leave breakers 7-14 – the baseboard and north wall 240 V heaters – <strong>off</strong>, and the remainder on.</li>
 <li>Turn breakers 7-14 <strong>on</strong> by pushing the breaker lever to the left to align with the others.</li>
 </ul></li>
-<li>The porta potty key is on the desktop to the right of the door.</li>
+<li>The porta potty key is on the desktop to the right of the door. The porta potty is on the South side of the shack.</li>
 <li>Please text Rick K3ROG (814-777-3298), Eric W3EDP (814-867-3393), or Mike N3LI (814-404-3991) when you leave. Please report any issues that need to be addressed.</li>
 </ul>
 </div>
@@ -336,7 +344,7 @@ div.tocify {
 <div id="ic-7610-hf-transceiver" class="section level2">
 <h2>IC-7610 HF Transceiver</h2>
 <div class="figure" style="text-align: center">
-<img src="img/ic-7610.jpg" alt="IC-7610" width="600px" />
+<img src="img/ic-7610.jpg" alt="IC-7610" width="75%" />
 <p class="caption">
 IC-7610
 </p>
@@ -386,7 +394,7 @@ IC-7610
 <li><p>Power up the IC-7610/NARC1 by pressing and briefly holding the power button.</p></li>
 </ol>
 <div class="figure" style="text-align: center">
-<img src="img/ic-7610-power-switch.png" alt="IC-7610 power switch" width="600px" />
+<img src="img/ic-7610-power-switch.png" alt="IC-7610 power switch" width="75%" />
 <p class="caption">
 IC-7610 power switch
 </p>
@@ -396,7 +404,7 @@ IC-7610 power switch
 </ol>
 <p>The IC-7610/NARC1 is connected to the Elecraft KPA1500 amplifier. The power supply for the KPA1500 is under the desk on a small footstool. Check that the KPA1500 power supply is on. If necessary, power-up the power supply by hitting the power switch on the upper rear left side of the power supply. When the amplifier power switch is on, you will see 3 green lights: AC on, High V supply, Low V supply. Power up the KPA1500 by pressing the <code>on</code> switch on the lower right hand side of the KPA1500 front panel.</p>
 <div class="figure" style="text-align: center">
-<img src="img/kpa1500-power-switch.png" alt="KPA1500 Power Switch" width="600px" />
+<img src="img/kpa1500-power-switch.png" alt="KPA1500 Power Switch" width="75%" />
 <p class="caption">
 KPA1500 Power Switch
 </p>
@@ -416,7 +424,7 @@ KPA1500 Power Switch
 <ul>
 <li>Audio levels for the two VFOs are controlledd via separate knobs on the left side of the front panel.</li>
 </ul>
-<p><img src="img/ic-7610-af.png" width="600px" style="display: block; margin: auto;" /></p>
+<p><img src="img/ic-7610-af.png" width="75%" style="display: block; margin: auto;" /></p>
 <ul>
 <li>You may switch operating bands in one of two ways:
 <ul>
@@ -424,11 +432,11 @@ KPA1500 Power Switch
 <li>Pressing the frequency on the touch screen.</li>
 </ul></li>
 </ul>
-<p><img src="img/ic-7610-chg-band.png" width="600px" style="display: block; margin: auto;" /></p>
+<p><img src="img/ic-7610-chg-band.png" width="75%" style="display: block; margin: auto;" /></p>
 <ul>
 <li>Switch operating modes by pressing the mode button on the touch panel.</li>
 </ul>
-<p><img src="img/ic-7610-chg-mode.png" width="600px" style="display: block; margin: auto;" /></p>
+<p><img src="img/ic-7610-chg-mode.png" width="75%" style="display: block; margin: auto;" /></p>
 <p>This opens a window where you can choose the mode of operation. - Hit the arrow button to close the window and save your choice.</p>
 <ul>
 <li>Turn digital noise reduction on or off by pressing the NR button on the left side of the front panel. When NR is on, the NR button will be illuminated.
@@ -439,25 +447,25 @@ KPA1500 Power Switch
 </ul></li>
 <li>Adjust preamplifier (<code>P.AMP</code>) settings, automatic gain control (<code>AGC</code>), Intercept Point (<code>IP+</code>), <code>VOX</code>, and compression (<code>COMP</code>) settings by pressing the corresponding button on the left side of the touch/display screen.</li>
 </ul>
-<p><img src="img/ic-7610-left-touch-buttons.png" width="600px" style="display: block; margin: auto;" /></p>
+<p><img src="img/ic-7610-left-touch-buttons.png" width="75%" style="display: block; margin: auto;" /></p>
 <ul>
 <li>Adjust touch/display screen settings via the MENU1/MENU2 buttons at the bottom of the touch/display screen.</li>
 </ul>
-<p><img src="img/ic-7610-menu-touch-buttons.png" width="600px" style="display: block; margin: auto;" /></p>
+<p><img src="img/ic-7610-menu-touch-buttons.png" width="75%" style="display: block; margin: auto;" /></p>
 <ul>
 <li>Select receive filter settings via the <code>FILTER</code> button on the right side of the front panel, below the <code>TWIN PBT</code> knob.</li>
 </ul>
-<p><img src="img/ic-7610-filter.png" width="600px" style="display: block; margin: auto;" /></p>
+<p><img src="img/ic-7610-filter.png" width="75%" style="display: block; margin: auto;" /></p>
 <ul>
 <li>Set RF power by pressing the MULTI button to open a window on the display/touch screen. Press the RF POWER panel to select it, and adjust the output power by turning the MULTI knob.</li>
 </ul>
-<p><img src="img/ic-7610-multi.png" width="600px" style="display: block; margin: auto;" /></p>
+<p><img src="img/ic-7610-multi.png" width="75%" style="display: block; margin: auto;" /></p>
 <!-- Elecraft K3S -->
 </div>
 </div>
 <div id="elecraft-k3s" class="section level2">
 <h2>Elecraft K3S</h2>
-<p><img src="img/elecraft-k3s.jpg" width="600px" style="display: block; margin: auto;" /></p>
+<p><img src="img/elecraft-k3s.jpg" width="75%" style="display: block; margin: auto;" /></p>
 <p>The K3S is currently connected to the NARC2 computer. The Elecraft K3S/NARC2 is located in the middle of the long desk to the right of the IC-7610/NARC1 station.</p>
 <div id="equipment-summary-1" class="section level3">
 <h3>Equipment summary</h3>
@@ -511,7 +519,7 @@ KPA1500 Power Switch
 </ol>
 <p>The IC-7610/NARC1 is connected to the Elecraft KPA1500 amplifier. The power supply for the KPA1500 is under the desk on a small footstool. Check that the KPA1500 power supply is on. If necessary, power-up the power supply by hitting the power switch on the upper rear left side of the power supply. When the amplifier power switch is on, you will see 3 green lights: AC on, High V supply, Low V supply. Power up the KPA1500 by pressing the <code>on</code> switch on the lower right hand side of the KPA1500 front panel.</p>
 <div class="figure" style="text-align: center">
-<img src="img/kpa1500-power-switch.png" alt="KPA1500 Power Switch" width="600px" />
+<img src="img/kpa1500-power-switch.png" alt="KPA1500 Power Switch" width="75%" />
 <p class="caption">
 KPA1500 Power Switch
 </p>
@@ -530,7 +538,7 @@ KPA1500 Power Switch
 </div>
 <div id="elecraft-kpa1500" class="section level2">
 <h2>Elecraft KPA1500</h2>
-<p><img src="img/kpa1500.png" width="600px" style="display: block; margin: auto;" /></p>
+<p><img src="img/kpa1500.png" width="75%" style="display: block; margin: auto;" /></p>
 <div id="summary" class="section level3">
 <h3>Summary</h3>
 <ul>
@@ -666,16 +674,16 @@ KPA1500 Power Switch
 <ol style="list-style-type: decimal">
 <li>For &lt; 100W output, set amplifier to STBY mode (yellow light) by pressing the MODE button to toggle between STBY (yellow light) and OPER (green).</li>
 </ol>
-<p><img src="img/kpa1500-mode.png" width="600px" style="display: block; margin: auto;" /></p>
+<p><img src="img/kpa1500-mode.png" width="75%" style="display: block; margin: auto;" /></p>
 <p>For higher power output, follow separate instructions for tuning the KPA1500 amplifier.</p>
 <ol start="2" style="list-style-type: decimal">
 <li>Confirm ANT1 is output (press ANTENNA to toggle).</li>
 </ol>
-<p><img src="img/kpa1500-ant.png" width="600px" style="display: block; margin: auto;" /></p>
+<p><img src="img/kpa1500-ant.png" width="75%" style="display: block; margin: auto;" /></p>
 <ol start="3" style="list-style-type: decimal">
 <li>Confirm ATU is IN (not BYP) by pressing and holding ATU TUNE button.</li>
 </ol>
-<p><img src="img/kpa1500-atu.png" width="600px" style="display: block; margin: auto;" /></p>
+<p><img src="img/kpa1500-atu.png" width="75%" style="display: block; margin: auto;" /></p>
 <p>Have fun!</p>
 </div>
 <div id="operating-hints" class="section level4">
@@ -1017,6 +1025,117 @@ KPA1500 Power Switch
 <li>Drive through and stop just outside the gate.</li>
 <li>Swing the gate back into closed position. Place the lock bar in position, and lock the gate.</li>
 <li>Please text Rick K3ROG (814-777-3298), Eric W3EDP (814-867-3393), or Mike N3LI (814-404-3991,) when you leave. Please report any issues that need to be addressed.</li>
+</ul>
+</div>
+<div id="towers" class="section level1">
+<h1>Towers</h1>
+<div id="west-tower" class="section level2">
+<h2>60’ West Tower</h2>
+<ul>
+<li>4 element triband (10, 15, 20m + WARC) Yagi</li>
+<li><del>160m dipole oriented ???</del></li>
+</ul>
+<div class="figure" style="text-align: center">
+<img src="img/60-ft-tower-west.jpg" alt="60' West Tower" width="600px" />
+<p class="caption">
+60’ West Tower
+</p>
+</div>
+</div>
+<div id="middle-tower" class="section level2">
+<h2>80’ Middle Tower</h2>
+<ul>
+<li>VHF 4 element vertical orientation Yagi + rotator</li>
+<li>2 VHF fixed direction vertical orientation 6 element Yagis (W3YA system)</li>
+<li>VHF vertical</li>
+<li>40m dipole oriented NW/SE</li>
+</ul>
+<div class="figure" style="text-align: center">
+<img src="img/80-ft-tower-middle.jpg" alt="80' Middle Tower" width="600px" />
+<p class="caption">
+80’ Middle Tower
+</p>
+</div>
+</div>
+<div id="north-tower" class="section level2">
+<h2>80` North Tower</h2>
+<ul>
+<li>4 element triband (10, 15, 20m + WARC) Yagi
+<ul>
+<li>Rotor (out-of-service as of 2019-11-24)</li>
+</ul></li>
+<li>X dipole</li>
+<li>X dipole</li>
+</ul>
+<div class="figure" style="text-align: center">
+<img src="img/80-ft-tower-north.jpg" alt="80' North Tower" width="600px" />
+<p class="caption">
+80’ North Tower
+</p>
+</div>
+</div>
+<div id="east-tower" class="section level2">
+<h2>60’ East Tower</h2>
+<ul>
+<li>VHF vertical</li>
+<li>80m dipole oriented N/S</li>
+</ul>
+<div class="figure" style="text-align: center">
+<img src="img/60-ft-tower-east.jpg" alt="60' East Tower" width="600px" />
+<p class="caption">
+60’ East Tower
+</p>
+</div>
+</div>
+</div>
+<div id="antennas-by-band" class="section level1">
+<h1>Antennas by band</h1>
+<div id="m" class="section level2">
+<h2>10, 12, 15, 17, 20 m</h2>
+<ul>
+<li>4 element Triband (10, 15, 20m + WARC) Yagi (@ 60’)
+<ul>
+<li>Rotor</li>
+</ul></li>
+<li><del>4 element Triband (10, 15, 20m + WARC) Yagi (@ 80’)</del> temporarily out of service
+<ul>
+<li>Rotor</li>
+</ul></li>
+</ul>
+</div>
+<div id="m-1" class="section level2">
+<h2>40 m</h2>
+<ul>
+<li>Dipole (@ 60’) oriented…</li>
+<li>Dipole (@ 80’) oriented…</li>
+</ul>
+</div>
+<div id="m-2" class="section level2">
+<h2>60 m</h2>
+<ul>
+<li>Dipole (@ ??’) oriented</li>
+</ul>
+</div>
+<div id="m-3" class="section level2">
+<h2>80 m</h2>
+<ul>
+<li>For CW</li>
+<li>Dipole (@ ??’) oriented</li>
+</ul>
+</div>
+<div id="m-4" class="section level2">
+<h2>160 m</h2>
+<ul>
+<li><del>Dipole (@ ??’)</del> temporarily out of service</li>
+</ul>
+</div>
+</div>
+<div id="antenna-use" class="section level1">
+<h1>Antenna use</h1>
+<ul>
+<li>Confirm that it is impossible for your transceiver to transmit while you are connecting your transceiver’s (color-tagged) feedline to one of the antenna connectors.</li>
+<li>Switch antennas manually by connecting your radio feedline from array of antenna connectors on the north wall.</li>
+<li>When you leave the shack, disconnect the transceiver feedline from the antenna you were using.</li>
 </ul>
 </div>
 
