Add packet page

--- a/clubhouse-guide.html
+++ b/clubhouse-guide.html
@@ -305,7 +305,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">NARC clubhouse guide</h1>
 <h4 class="author">Rick Gilmore K3ROG</h4>
-<h4 class="date">2019-11-24 13:49:30</h4>
+<h4 class="date">2019-11-24 14:00:38</h4>
 
 </div>
 
@@ -570,8 +570,24 @@ KPA1500 Power Switch
 <div id="w-operation-1" class="section level5">
 <h5>&gt; 100 W operation</h5>
 <p>For modes where power &gt; 100 W is desired (e.g., phone, CW, RTTY), you will need to tune-up the amplifier.</p>
+<!-- IC-2710 Packet -->
 </div>
 </div>
+</div>
+</div>
+<div id="packet-station" class="section level2">
+<h2>Packet station</h2>
+<p>The packet station is located along the North wall of the shack near the HF antenna feedlines.</p>
+<ul>
+<li>Icom IC-2710 Dual Band Transceiver set to 145.030 MHz</li>
+<li>Laptop</li>
+<li>Astron power supply</li>
+</ul>
+<div class="figure" style="text-align: center">
+<img src="img/packet.jpg" alt="IC-2710 Packet Transceiver" width="75%" />
+<p class="caption">
+IC-2710 Packet Transceiver
+</p>
 </div>
 </div>
 </div>
