--- a/clubhouse-guide.html
+++ b/clubhouse-guide.html
@@ -305,7 +305,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">NARC clubhouse guide</h1>
 <h4 class="author">Rick Gilmore K3ROG</h4>
-<h4 class="date">2019-11-24 14:00:38</h4>
+<h4 class="date">2019-11-24 14:11:28</h4>
 
 </div>
 
@@ -391,7 +391,15 @@ IC-7610
 <ol start="3" style="list-style-type: decimal">
 <li><p>Power up the UPS by pushing the front button. The green power light should illuminate.</p></li>
 <li><p>Power up the Astron RS-35A power supply that powers the IC-7610/NARC1. The power supply is located to the right of the Elecraft KPA1500 amplifier.</p></li>
-<li><p>Power up the IC-7610/NARC1 by pressing and briefly holding the power button.</p></li>
+</ol>
+<div class="figure" style="text-align: center">
+<img src="img/astron-rs-35a.png" alt="Astron RS-35A" width="75%" />
+<p class="caption">
+Astron RS-35A
+</p>
+</div>
+<ol start="5" style="list-style-type: decimal">
+<li>Power up the IC-7610/NARC1 by pressing and briefly holding the power button.</li>
 </ol>
 <div class="figure" style="text-align: center">
 <img src="img/ic-7610-power-switch.png" alt="IC-7610 power switch" width="75%" />
@@ -506,6 +514,12 @@ KPA1500 Power Switch
 <li>Power up the Astron RS-35A power supply</li>
 </ol>
 <p>The power supply is located to the far right of the NARC2 station. Press the red ‘on’ switch on the lower left front part of the panel.</p>
+<div class="figure" style="text-align: center">
+<img src="img/astron-rs-35a.png" alt="Astron RS-35A" width="75%" />
+<p class="caption">
+Astron RS-35A
+</p>
+</div>
 <ol start="5" style="list-style-type: decimal">
 <li>Power up the K3S.</li>
 </ol>
