--- a/clubhouse-guide.html
+++ b/clubhouse-guide.html
@@ -305,7 +305,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">NARC clubhouse guide</h1>
 <h4 class="author">Rick Gilmore K3ROG</h4>
-<h4 class="date">2019-11-24 14:11:28</h4>
+<h4 class="date">2019-12-06 16:10:48</h4>
 
 </div>
 
@@ -1063,7 +1063,7 @@ IC-2710 Packet Transceiver
 <h2>60’ West Tower</h2>
 <ul>
 <li>4 element triband (10, 15, 20m + WARC) Yagi</li>
-<li><del>160m dipole oriented ???</del></li>
+<li><del>40m dipole</del></li>
 </ul>
 <div class="figure" style="text-align: center">
 <img src="img/60-ft-tower-west.jpg" alt="60' West Tower" width="600px" />
@@ -1094,8 +1094,8 @@ IC-2710 Packet Transceiver
 <ul>
 <li>Rotor (out-of-service as of 2019-11-24)</li>
 </ul></li>
-<li>X dipole</li>
-<li>X dipole</li>
+<li>160m dipole oriented NW/SE</li>
+<li>80m dipole</li>
 </ul>
 <div class="figure" style="text-align: center">
 <img src="img/80-ft-tower-north.jpg" alt="80' North Tower" width="600px" />
@@ -1137,26 +1137,20 @@ IC-2710 Packet Transceiver
 <h2>40 m</h2>
 <ul>
 <li>Dipole (@ 60’) oriented…</li>
-<li>Dipole (@ 80’) oriented…</li>
+<li>Dipole (@ 80’) oriented NW/SE</li>
 </ul>
 </div>
 <div id="m-2" class="section level2">
-<h2>60 m</h2>
+<h2>80m</h2>
 <ul>
-<li>Dipole (@ ??’) oriented</li>
+<li>CW cut</li>
+<li>Phone (75m) cut</li>
 </ul>
 </div>
 <div id="m-3" class="section level2">
-<h2>80 m</h2>
+<h2>160m</h2>
 <ul>
-<li>For CW</li>
-<li>Dipole (@ ??’) oriented</li>
-</ul>
-</div>
-<div id="m-4" class="section level2">
-<h2>160 m</h2>
-<ul>
-<li><del>Dipole (@ ??’)</del> temporarily out of service</li>
+<li>Dipole on North tower oriented NW/SE</li>
 </ul>
 </div>
 </div>
