Add 10/3 SET to report

--- a/2020-09-08-clubhouse-rpt.html
+++ b/2020-09-08-clubhouse-rpt.html
@@ -120,7 +120,7 @@ slide:not(.current) .plotly.html-widget{
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">2020-09-08 07:33:42</p>
+            <p style="margin-top: 6px; margin-left: -2px;">2020-09-08 07:48:31</p>
           </hgroup>
   </slide>
 
@@ -240,9 +240,10 @@ Photo: Mike Coslo
 <li>Replace PCs and monitors</li>
 </ul>
 
-</article></slide><slide class=""><hgroup><h2>Possible clubhouse use</h2></hgroup><article  id="possible-clubhouse-use">
+</article></slide><slide class=""><hgroup><h2>Future clubhouse use</h2></hgroup><article  id="future-clubhouse-use">
 
 <ul>
+<li>October 3 • ARRL Simulated Emergency Test (SET)</li>
 <li>November 7-9 • ARRL Sweepstakes CW</li>
 <li>November 21-23 • ARRL Sweepstakes SSB</li>
 <li>November 28-29 • CQ WW DX CW</li>
