Antenna and clubhouse report for Oct BoD mtg.

--- a/2020-09-08-clubhouse-rpt.html
+++ b/2020-09-08-clubhouse-rpt.html
@@ -20,7 +20,7 @@
       // Slide settings
       settings: {
                 title: 'NARC Clubhouse Report',
-                        subtitle: 'September 2020',
+                        subtitle: 'October 2020',
                 useBuilds: true,
         usePrettify: true,
         enableSlideAreas: true,
@@ -120,47 +120,28 @@ slide:not(.current) .plotly.html-widget{
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">2020-09-08 07:48:31</p>
+            <p style="margin-top: 6px; margin-left: -2px;">2020-10-26 14:28:10</p>
           </hgroup>
   </slide>
 
 <slide class=""><hgroup><h2>Recent activities</h2></hgroup><article  id="recent-activities">
 
 <ul>
-<li>Work day (NK8Q, KC3FDD, N3LI, K3ROG)
+<li>Work day (K3ROG, N3LI, W3EDP, W0LO)
 
 <ul>
-<li>removed Yagi from precarious position for disassembly</li>
-<li>installed cabinets on wall</li>
+<li>Preparation for network installation</li>
+<li>Install new rack for equipment</li>
 </ul></li>
-<li>N3LI installed countertop</li>
-<li>N3LI installed IC-9100; updated digital software on IC-7610 &amp; K3S</li>
-<li>K0LO, N3LI, W3EDP, &amp; K3ROG met about secure network project</li>
+<li>K0LO &amp; W3EDP
+
+<ul>
+<li>Ordered and installed new network cabinet</li>
+<li>Awaiting new fiber optic connection replacement by N3EB</li>
+</ul></li>
 </ul>
 
-</article></slide><slide class=""><hgroup><h2>Equipment status</h2></hgroup><article  id="equipment-status">
-
-<p><img src="img/yagi-tilting.jpeg" height="500px" style="display: block; margin: auto;" /></p>
-
-</article></slide><slide class=""><hgroup><h2></h2></hgroup><article >
-
-<p><img src="img/yagi-down.jpg" width="700px" style="display: block; margin: auto;" /></p>
-
-</article></slide><slide class=""><hgroup><h2></h2></hgroup><article >
-
-<p><img src="img/yagi-safe.jpg" width="700px" style="display: block; margin: auto;" /></p>
-
-</article></slide><slide class=""><hgroup><h2></h2></hgroup><article >
-
-<p><img src="img/cabinets-waiting-bottom.jpg" width="700px" style="display: block; margin: auto;" /></p>
-
-</article></slide><slide class=""><hgroup><h2></h2></hgroup><article >
-
-<p><img src="img/cabinets-waiting-countertop.jpg" height="550px" style="display: block; margin: auto;" /></p>
-
-</article></slide><slide class=""><hgroup><h2></h2></hgroup><article >
-
-<p><img src="img/clubhouse-kitchen.jpeg" height="550px" style="display: block; margin: auto;" /></p>
+</article></slide><slide class=""><hgroup><h2>Radio status</h2></hgroup><article  id="radio-status">
 
 </article></slide><slide class=""><hgroup><h2>NARC 1 (Icom IC-7610)</h2></hgroup><article  id="narc-1-icom-ic-7610">
 
@@ -220,30 +201,45 @@ Photo: Mike Coslo
 </article></slide><slide class=""><hgroup><h2>Future work</h2></hgroup><article  id="future-work">
 
 <ul>
-<li><del>Finish cabinet installation</del></li>
-<li>Install &amp; test private network appliance with help from Mark K0LO</li>
-<li>Peform antenna maintenance prior to contest season
+<li>In the shack
 
 <ul>
-<li>Repair 40m dipole (West 60’ Tower)</li>
+<li>Decide on wifi on/off mechanism and complete wifi installation (K0LO, W3EDP)</li>
+<li>Purchase additional shelves, bins (K3ROG)</li>
+<li>Update user guides and manuals (K3ROG)</li>
 </ul></li>
+<li>Peform <a href='antenna-status-2020-09-26.html' title=''>antenna maintenance</a> prior to contest season
+
+<ul>
 <li>Repair and reinstall multi-band Yagi on North 80’</li>
+<li>Repair multi-band Yagi on East 60’</li>
+</ul></li>
 </ul>
 
 </article></slide><slide class=""><hgroup><h2>Under consideration</h2></hgroup><article  id="under-consideration">
 
 <ul>
-<li>Research rotators &amp; controller replacements</li>
+<li>Research rotators &amp; controller replacements
+
+<ul>
+<li>Goal: Computer-controlled rotation of antennas</li>
+</ul></li>
 <li>Replace keyed lock with keyless</li>
 <li>Run 2nd coax lines to NARC-1 and NARC-2 to take advantage of dual receivers in both rigs</li>
-<li>Digital-only station (IC-9100?)</li>
 <li>Replace PCs and monitors</li>
+</ul>
+
+</article></slide><slide class=""><hgroup><h2>Recent clubhouse use</h2></hgroup><article  id="recent-clubhouse-use">
+
+<ul>
+<li>October 3 • ARRL Simulated Emergency Test (SET), K3CWP, N3LI, K3ROG</li>
+<li>October 10-11 • PA QSO Party, NK8Q</li>
+<li>October 24-25 • CQ WWW DX SSB, NK8Q</li>
 </ul>
 
 </article></slide><slide class=""><hgroup><h2>Future clubhouse use</h2></hgroup><article  id="future-clubhouse-use">
 
 <ul>
-<li>October 3 • ARRL Simulated Emergency Test (SET)</li>
 <li>November 7-9 • ARRL Sweepstakes CW</li>
 <li>November 21-23 • ARRL Sweepstakes SSB</li>
 <li>November 28-29 • CQ WW DX CW</li>
