Fix Sept/Oct bug

--- a/2020-10-26-clubhouse-rpt.html
+++ b/2020-10-26-clubhouse-rpt.html
@@ -120,7 +120,7 @@ slide:not(.current) .plotly.html-widget{
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">2020-10-26 14:29:27</p>
+            <p style="margin-top: 6px; margin-left: -2px;">2020-10-26 16:35:46</p>
           </hgroup>
   </slide>
 
@@ -145,7 +145,7 @@ slide:not(.current) .plotly.html-widget{
 
 </article></slide><slide class=""><hgroup><h2>NARC 1 (Icom IC-7610)</h2></hgroup><article  id="narc-1-icom-ic-7610">
 
-<div style="text-align: center" class="figure">
+<div class="figure" style="text-align: center">
 <img src="img/narc-1.jpeg" alt="Photo: Mike Coslo" height="500px" />
 
 <p class="caption">
@@ -156,7 +156,7 @@ Photo: Mike Coslo
 
 </article></slide><slide class=""><hgroup><h2>NARC 2 (Elecraft K3S)</h2></hgroup><article  id="narc-2-elecraft-k3s">
 
-<div style="text-align: center" class="figure">
+<div class="figure" style="text-align: center">
 <img src="img/narc-2.jpeg" alt="Photo: Mike Coslo" height="500px" />
 
 <p class="caption">
@@ -167,7 +167,7 @@ Photo: Mike Coslo
 
 </article></slide><slide class=""><hgroup><h2>NARC 3 (Icom 9100)</h2></hgroup><article  id="narc-3-icom-9100">
 
-<div style="text-align: center" class="figure">
+<div class="figure" style="text-align: center">
 <img src="img/narc-3.jpeg" alt="Photo: Mike Coslo" height="500px" />
 
 <p class="caption">
@@ -178,7 +178,7 @@ Photo: Mike Coslo
 
 </article></slide><slide class=""><hgroup><h2>NARC packet</h2></hgroup><article  id="narc-packet">
 
-<div style="text-align: center" class="figure">
+<div class="figure" style="text-align: center">
 <img src="img/narc-packet.jpeg" alt="Photo: Mike Coslo" height="500px" />
 
 <p class="caption">
@@ -189,7 +189,7 @@ Photo: Mike Coslo
 
 </article></slide><slide class=""><hgroup><h2></h2></hgroup><article >
 
-<div style="text-align: center" class="figure">
+<div class="figure" style="text-align: center">
 <img src="img/clubhouse-panorama.jpeg" alt="Photo: Mike Coslo" height="350px" />
 
 <p class="caption">
