Add IC-9100 basics.

--- a/clubhouse-guide.html
+++ b/clubhouse-guide.html
@@ -268,7 +268,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">NARC clubhouse guide</h1>
 <h4 class="author">Rick Gilmore K3ROG</h4>
-<h4 class="date">2020-12-08 17:03:32</h4>
+<h4 class="date">2020-12-08 19:31:47</h4>
 
 </div>
 
@@ -527,6 +527,41 @@ KPA1500 Power Switch
 </ol>
 <p>The K3S/NARC2 is connected via USB2 to the NARC2 PC. Open your logging program of choice. NARC has licenses for N1MM and N3FJP’s Amateur Contact Log.</p>
 <p>To operate digital modes (e.g., FT8/FT4, JS8Call, fldigi), open those programs. See instructions for operating these modes in separate documents.</p>
+<!-- Icom IC-9100 -->
+</div>
+</div>
+</div>
+<div id="icom-ic-9100" class="section level2">
+<h2>Icom IC-9100</h2>
+<p><img src="img/IC-9100.jpg" width="75%" style="display: block; margin: auto;" /></p>
+<p>The IC-9100 is currently connected to the NARC-3 computer. NARC3 is located near the corner of the short desk on the North wall of the station.</p>
+<div id="equipment-summary-2" class="section level3">
+<h3>Equipment summary</h3>
+</div>
+<div id="connect-and-power-up-1" class="section level3">
+<h3>Connect and power-up</h3>
+<ol style="list-style-type: decimal">
+<li><del>Connect to the power mains</del>.</li>
+</ol>
+<p>This rig’s power supply is not disconnected.</p>
+<ol start="2" style="list-style-type: decimal">
+<li>Connect the radio to a suitable antenna.</li>
+</ol>
+<p><strong>Before you power up the radio, connect it to a suitable antenna</strong>. <strong>The antenna connections are located on the north wall, near the repeater cabinet</strong>. Choose the PL-259 connector with the COLOR K3S tag. Plug the cable from the radio into the cable connector for one of the antennas, for example, one of the triband Yagis for 10-20 m. <strong>Please do not remove the N/PL-259 connectors from the antenna feedlines.</strong></p>
+<ol start="3" style="list-style-type: decimal">
+<li><del>Power up the UPS</del>.</li>
+</ol>
+<p>The UPS is typically powered up, so this step is unnecessary.</p>
+<ol start="4" style="list-style-type: decimal">
+<li><p>Power up the Astron RS-35A power supply.</p></li>
+<li><p>Power up the IC-9100</p></li>
+</ol>
+<div id="log-in-to-the-computer-2" class="section level4">
+<h4>Log-in to the computer</h4>
+<ol style="list-style-type: decimal">
+<li><p>Power up the NARC3 PC by pressing the power button on the front panel.</p></li>
+<li><p>Log-in using the appropriate password.</p></li>
+</ol>
 <!-- KPA1500 -->
 </div>
 </div>
@@ -1095,7 +1130,7 @@ IC-2710 Packet Transceiver
 <li>40m dipole</li>
 </ul>
 <div class="figure" style="text-align: center">
-<img src="img/60-ft-tower-west.jpg" alt="60' West Tower" width="600px" />
+<img src="img/60-ft-tower-west.jpg" alt="60' West Tower" width="75%" />
 <p class="caption">
 60’ West Tower
 </p>
@@ -1110,7 +1145,7 @@ IC-2710 Packet Transceiver
 <li>40m dipole oriented NW/SE</li>
 </ul>
 <div class="figure" style="text-align: center">
-<img src="img/80-ft-tower-middle.jpg" alt="80' Middle Tower" width="600px" />
+<img src="img/80-ft-tower-middle.jpg" alt="80' Middle Tower" width="75%" />
 <p class="caption">
 80’ Middle Tower
 </p>
@@ -1127,7 +1162,7 @@ IC-2710 Packet Transceiver
 <li>80m dipole</li>
 </ul>
 <div class="figure" style="text-align: center">
-<img src="img/80-ft-tower-north.jpg" alt="80' North Tower" width="600px" />
+<img src="img/80-ft-tower-north.jpg" alt="80' North Tower" width="75%" />
 <p class="caption">
 80’ North Tower
 </p>
@@ -1140,7 +1175,7 @@ IC-2710 Packet Transceiver
 <li>80m dipole oriented N/S</li>
 </ul>
 <div class="figure" style="text-align: center">
-<img src="img/60-ft-tower-east.jpg" alt="60' East Tower" width="600px" />
+<img src="img/60-ft-tower-east.jpg" alt="60' East Tower" width="75%" />
 <p class="caption">
 60’ East Tower
 </p>
