Add links to inventory, user survey

--- a/2021-03-23-clubhouse-rpt.html
+++ b/2021-03-23-clubhouse-rpt.html
@@ -127,7 +127,7 @@ slide:not(.current) .plotly.html-widget{
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">2021-03-22 09:22:32</p>
+            <p style="margin-top: 6px; margin-left: -2px;">2021-03-22 15:17:20</p>
           </hgroup>
   </slide>
 
@@ -190,7 +190,7 @@ N3LI installing fldigi.
 <li>New pages(s):
 
 <ul>
-<li><a href='https://groups.io/g/Nittany-ARC/wiki' title=''>https://groups.io/g/Nittany-ARC/wiki</a></li>
+<li><a href='https://groups.io/g/Nittany-ARC/wiki' title=''>Wiki home</a></li>
 <li><a href='https://groups.io/g/Nittany-ARC/wiki/25936' title=''>Station guide</a></li>
 <li><a href='https://groups.io/g/Nittany-ARC/wiki/25937' title=''>Antennas guide</a></li>
 </ul></li>
@@ -216,15 +216,31 @@ N3LI installing fldigi.
 </article></slide><slide class=""><hgroup><h2>Spring/Fall 2021 work-day projects</h2></hgroup><article  id="springfall-2021-work-day-projects">
 
 <ul>
-<li>Full equipment inventory (shack, attic, shed)
+<li>Full <a href='https://docs.google.com/spreadsheets/d/1J_zTmty3JlsgPIf_KGFJ72rzpGeRJSGKMHn6ZnMDEuE/edit?usp=sharing' title=''>equipment inventory</a> (shack, attic, shed)
 
 <ul>
 <li>Discard/sell unused items</li>
 <li><strong>BEFORE Field Day 2021</strong></li>
 </ul></li>
 <li>Wall of Fame for plaques</li>
-<li>Install large-scale monitor (w/ Hamclock, PSKreporter, etc. windows on Raspberry Pi)</li>
+<li>Install large-scale monitor (w/ Hamclock, PSKreporter, etc. windows on Raspberry Pi)
+
+<ul>
+<li>NK8K donation of TV.</li>
+</ul></li>
+</ul>
+
+</article></slide><slide class=""><hgroup><h2></h2></hgroup><article >
+
+<ul>
+<li>Dipole maintenance
+
+<ul>
 <li>Retune 40m dipole for CW/digital portion</li>
+<li>Reposition 40m dipoles for better geographic coverage</li>
+</ul></li>
+<li>Repainting exterior?</li>
+<li>Better ventilation in shed</li>
 </ul>
 
 </article></slide><slide class=""><hgroup><h2>Under consideration</h2></hgroup><article  id="under-consideration">
@@ -236,8 +252,8 @@ N3LI installing fldigi.
 <li>Replacing PC</li>
 <li>Consider new TNC- or computer-based option (direwolf)</li>
 </ul></li>
-<li>Member survey about interests in and usage of clubhouse</li>
 <li>Satellite antenna assembly/installation</li>
+<li>Member <a href='https://forms.gle/HXyJcJuCy1tJDGNQ8' title=''>survey</a> about interests in and usage of clubhouse</li>
 </ul>
 
 </article></slide><slide class=""><hgroup><h2></h2></hgroup><article >
