Add Mosley repair estimate.

--- a/2021-03-23-clubhouse-rpt.html
+++ b/2021-03-23-clubhouse-rpt.html
@@ -127,7 +127,7 @@ slide:not(.current) .plotly.html-widget{
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">2021-03-22 15:17:20</p>
+            <p style="margin-top: 6px; margin-left: -2px;">2021-03-23 10:29:22</p>
           </hgroup>
   </slide>
 
@@ -146,12 +146,13 @@ slide:not(.current) .plotly.html-widget{
 
 <ul>
 <li>New <a href='http://www.mosley-electronics.com/pdf/pricesheet.pdf' title=''>price</a> is $1,182.95.</li>
+<li>Estimate for parts to is $747.70 + tax (if applicable to shipping), 45-60 day lead</li>
 </ul></li>
 </ul>
 
 </article></slide><slide class=""><hgroup><h2></h2></hgroup><article >
 
-<div style="text-align: center" class="figure">
+<div class="figure" style="text-align: center">
 <img src="img/narc-1-new-computer.jpeg" alt="N3LI installing fldigi." width="700px" />
 
 <p class="caption">
