Fix typos after 2021-03-23 BoD presentation

--- a/2021-03-23-clubhouse-rpt.html
+++ b/2021-03-23-clubhouse-rpt.html
@@ -42,7 +42,7 @@
     };
   </script>
 
-  <script src="libs/header-attrs-2.6/header-attrs.js"></script>
+  <script src="libs/header-attrs-2.3/header-attrs.js"></script>
   <link href="libs/ioslides-13.5.1/fonts/fonts.css" rel="stylesheet" />
   <link href="libs/ioslides-13.5.1/theme/css/default.css" rel="stylesheet" />
   <link href="libs/ioslides-13.5.1/theme/css/phone.css" rel="stylesheet" />
@@ -88,13 +88,6 @@ slide:not(.current) .plotly.html-widget{
   display: block;
 }
 
-    code{white-space: pre-wrap;}
-    span.smallcaps{font-variant: small-caps;}
-    span.underline{text-decoration: underline;}
-    div.column{display: inline-block; vertical-align: top; width: 50%;}
-    div.hanging-indent{margin-left: 1.5em; text-indent: -1.5em;}
-    ul.task-list{list-style: none;}
-            
     slides > slide:not(.nobackground):before {
       font-size: 12pt;
       content: "";
@@ -127,7 +120,7 @@ slide:not(.current) .plotly.html-widget{
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">2021-03-23 10:29:22</p>
+            <p style="margin-top: 6px; margin-left: -2px;">2021-03-23 19:47:27</p>
           </hgroup>
   </slide>
 
@@ -140,8 +133,13 @@ slide:not(.current) .plotly.html-widget{
 <ul>
 <li>Tweak packet station (KB1BH)</li>
 <li>List required parts for Mosley Classic CL-33-WARC</li>
-<li>Install new computer &amp; monitor at NARC-1.</li>
+<li>Install new computer &amp; monitor at NARC-1</li>
 </ul></li>
+</ul>
+
+</article></slide><slide class=""><hgroup><h2></h2></hgroup><article >
+
+<ul>
 <li>Parts estimate for Mosley Classic CL-33-WARC
 
 <ul>
@@ -152,7 +150,7 @@ slide:not(.current) .plotly.html-widget{
 
 </article></slide><slide class=""><hgroup><h2></h2></hgroup><article >
 
-<div class="figure" style="text-align: center">
+<div style="text-align: center" class="figure">
 <img src="img/narc-1-new-computer.jpeg" alt="N3LI installing fldigi." width="700px" />
 
 <p class="caption">
@@ -160,8 +158,6 @@ slide:not(.current) .plotly.html-widget{
 N3LI installing fldigi.
 
 </p></div>
-
-</article></slide><slide class=""><hgroup><h2></h2></hgroup><article >
 
 </article></slide><slide class=""><hgroup><h2>Next steps in computer upgrade</h2></hgroup><article  id="next-steps-in-computer-upgrade">
 
@@ -227,7 +223,7 @@ N3LI installing fldigi.
 <li>Install large-scale monitor (w/ Hamclock, PSKreporter, etc. windows on Raspberry Pi)
 
 <ul>
-<li>NK8K donation of TV.</li>
+<li>NK8Q donation of TV.</li>
 </ul></li>
 </ul>
 
