--- a/2021-04-13-n3m-event.html
+++ b/2021-04-13-n3m-event.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>NARC Clubhouse Events</title>
+  <title>N3M Special Event</title>
 
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
@@ -19,13 +19,13 @@
     var SLIDE_CONFIG = {
       // Slide settings
       settings: {
-                title: 'NARC Clubhouse Events',
+                title: 'N3M Special Event',
                         subtitle: 'April 2021 Membership Meeting',
                 useBuilds: true,
         usePrettify: true,
         enableSlideAreas: true,
         enableTouch: true,
-                        favIcon: '2021-04-13-clubhouse-events_files/logo.png',
+                        favIcon: '2021-04-13-n3m-event_files/logo.png',
               },
 
       // Author information
@@ -101,7 +101,7 @@ slide:not(.current) .plotly.html-widget{
       position: absolute;
       bottom: 20px;
       left: 60px;
-      background: url(2021-04-13-clubhouse-events_files/logo.png) no-repeat 0 50%;
+      background: url(2021-04-13-n3m-event_files/logo.png) no-repeat 0 50%;
       -webkit-background-size: 30px 30px;
       -moz-background-size: 30px 30px;
       -o-background-size: 30px 30px;
@@ -121,47 +121,45 @@ slide:not(.current) .plotly.html-widget{
 <slides class="layout-widescreen">
 
   <slide class="title-slide segue nobackground">
-        <aside class="gdbar"><img src="2021-04-13-clubhouse-events_files/logo.png"></aside>
+        <aside class="gdbar"><img src="2021-04-13-n3m-event_files/logo.png"></aside>
         <!-- The content of this hgroup is replaced programmatically through the slide_config.json. -->
     <hgroup class="auto-fadein">
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">2021-04-13 14:40:43</p>
+            <p style="margin-top: 6px; margin-left: -2px;">2021-04-13 14:40:55</p>
           </hgroup>
   </slide>
 
-<slide class=""><hgroup><h2>W3M Memorial Day commemoration</h2></hgroup><article  id="w3m-memorial-day-commemoration">
+<slide class=""><hgroup><h2></h2></hgroup><article >
+
+<p><img src="https://www.nps.gov/common/uploads/grid_builder/flni/crop1_1/1044574A-CD27-8808-3295FA9D1A449A42.jpg?width=640&quality=90&mode=crop" height="550px" style="display: block; margin: auto;" /></p>
+
+</article></slide><slide class=""><hgroup><h2>N3M Special Event Station</h2></hgroup><article  id="n3m-special-event-station">
 
 <ul>
-<li>Memorial Day W3M special event station
-
-<ul>
-<li>Saturday, May 29 - Monday, May 31, 2021</li>
-<li>Home stations + mountaintop</li>
-</ul></li>
-<li>Need operators
-
-<ul>
-<li>Home station or mountaintop?</li>
-</ul></li>
+<li>Saturday, September 11, 2021 is the 20th anniversary of the 9/11 attacks</li>
+<li>Flight 93 crash site and memorial is in Somerset County</li>
 </ul>
 
 </article></slide><slide class=""><hgroup><h2></h2></hgroup><article >
 
-<p><img src="img/w3m-qsl.jpg" width="410" height="550px" style="display: block; margin: auto;" /></p>
+<p><img src="img/flight-93-map.png" width="927" height="550px" style="display: block; margin: auto;" /></p>
 
-</article></slide><slide class=""><hgroup><h2><a href='http://www.arrl.org/field-day' title=''>ARRL Field Day</a></h2></hgroup><article  id="arrl-field-day">
+</article></slide><slide class=""><hgroup><h2></h2></hgroup><article >
+
+<p><img src="https://www.nps.gov/common/uploads/grid_builder/flni/crop1_1/CF7ADC5E-1DD8-B71B-0B50B3A2EC13EC78.jpg?width=640&quality=90&mode=crop" height="550px" style="display: block; margin: auto;" /></p>
+
+</article></slide><slide class=""><hgroup><h2></h2></hgroup><article >
 
 <ul>
-<li>Saturday, June 26 - Sunday, June 27, 2021</li>
-<li>Covid rules still apply (clubs can group scores)</li>
-<li>Home stations + mountaintop
+<li>Have reserved N3M (&ldquo;niner-three memorial&rdquo;) callsign for that date with ARRL</li>
+<li>Plan to operate from NARC clubhouse
 
 <ul>
-<li>Home (Class D) and Home on Emergency Power (Class E) stations permitted to contact all stations.</li>
-<li><a href='http://www.arrl.org/news/arrl-to-extend-field-day-rule-waivers-from-2020-add-class-d-and-e-power-limit' title=''>150W power limits</a></li>
+<li>Have contacted Flight 93 Memorial staff about securing a permit to operate from the Flight 93 Memorial grounds</li>
 </ul></li>
+<li>Have contacted current &ldquo;owner&rdquo; of QRZ.com N3M page</li>
 </ul></article></slide>
 
 
